# finance-data-platform

./: README.md  README_PT.md  docker-compose.yml  main.py  pyproject.toml
ingestion/: pipeline.py
ingestion/data_fonts/mercado_de_acoes_alpha/: api_symbol_daily.py
ingestion/pipelines/: stock_prices_daily.py
ingestion/utils/: db_engine.py  db_insert_data.py  db_read_data_to_dataframe.py
